# PEGB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.sh
src/: display.c  display.h  display.pio  font.h  hw_config.h  input.c  input.h  main.c  menu.c  menu.h
src/boards/: pimoroni_explorer.h
tools/: convert_rom.py
